Fixed code wrap

--- a/assets/css/_extra.scss
+++ b/assets/css/_extra.scss
@@ -163,3 +163,7 @@ figcaption h4 {
   padding: 2px 0 0 10px;
   font-style: italic;
 }
+
+pre {
+  white-space: pre-line;
+}
